<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffeebg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/input_group"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="SIGN UP"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/slogan"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom"
            android:entries="@array/country_arrays"
            android:padding="15dp" />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/sign_up"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="#FE5295"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/signIn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/redirect_login"
            android:textAllCaps="true"
            android:textColor="#FAD0E1"
            android:textSize="13dp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>