<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fireexit">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/input_group">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="SIGN IN"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="16sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:background="@drawable/edit_text_top"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp" />


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="SIGN IN"
            android:textAllCaps="false"
            android:textColor="#FE5295"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/signUp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="@string/redirect_signup"
            android:textAllCaps="true"
            android:textSize="13dp"
            android:textStyle="bold"
            android:textColor="#FAD0E1"
            android:fontFamily="sans-serif"/>


    </LinearLayout>

</RelativeLayout>