<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00EB6A6A"
    tools:context="com.example.SportBubble.ScheduleActivity">


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/pullToRefreshSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="56dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/bg_sched"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/fill_up"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="68dp"
                android:layout_marginRight="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="BOOK NOW!"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="Lace Your Shoes"
                    android:textColor="#000000"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/jsonview"
                   />

            </LinearLayout>




            <LinearLayout
                android:id="@+id/fill_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name_book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_top"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="15dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/email_book"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_middle"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp" />


                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/showGrounds"
                    android:background="@drawable/edit_text_bottom"
                    android:padding="15dp" />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/showSlots"
                    android:background="@drawable/edit_text_bottom"
                    android:visibility="gone"
                    android:padding="15dp" />

                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/CheckAvail"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/checkAvail"
                    android:textAllCaps="false"
                    android:textColor="#660124"
                    android:textSize="17sp" />


                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/book"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/bookBtn"
                    android:textAllCaps="false"
                    android:textColor="#FE5295"
                    android:textSize="17sp" />
            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.SwipeRefreshLayout>


</RelativeLayout>
